tat ca con lai...

--- a/src/main/resources/static/admin/dashboard.html
+++ b/src/main/resources/static/admin/dashboard.html
@@ -133,11 +133,11 @@
                             {{selectedYear}} </p>
                     </div>
                 </div>
-                <div class="card">
+               <!-- <div class="card">
                     <div class="card-body">
                         <canvas id="myLineChart" width="400" height="200"></canvas>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
 
