--- a/src/main/resources/static/admin/index.html
+++ b/src/main/resources/static/admin/index.html
@@ -120,43 +120,22 @@
                         <li><a href="#!loaikhachhang">Loại khách hàng</a></li>
                     </ul>
                 </li>
-                <li class="submenu">
-                    <a href="javascript:void(0);"><img src="/assetss/img/icons/sales1.svg" alt="img"><span>Đơn hàng</span> <span class="menu-arrow"></span></a>
-                    <ul>
-                        <li><a href="#!order">Chờ xác nhận</a></li>
-                        <li><a href="#">Đã xác nhận</a></li>
-                        <li><a href="#">Giao hàng</a></li>
-                        <li><a href="#">Hoàn thành</a></li>
-                        <li><a href="#">Đã hủy</a></li>
-                    </ul>
+                <li >
+                    <a href="#!order"><img src="/assetss/img/icons/sales1.svg"  alt="img"><span>Đơn hàng</span> </a>
                 </li>
-                <li class="submenu">
-                    <a href="javascript:void(0);"><img src="/assetss/img/icons/expense1.svg" alt="img"><span> Voucher</span> <span class="menu-arrow"></span></a>
-                    <ul>
-                        <li><a href="#!magiamgia">Voucher</a></li>
-                        <li><a href="createexpense.html">Add Expense</a></li>
-                        <li><a href="expensecategory.html">Expense Category</a></li>
-                    </ul>
-                </li>
-                <li class="submenu">
-                    <a href="javascript:void(0);"><img src="/assetss/img/icons/expense1.svg" alt="img"><span> VN pay</span> <span class="menu-arrow"></span></a>
-                    <ul>
-                        <li><a href="expenselist.html">Expense List</a></li>
-                        <li><a href="createexpense.html">Add Expense</a></li>
-                        <li><a href="expensecategory.html">Expense Category</a></li>
-                    </ul>
-                </li>
+
 
                 <li class="submenu">
                     <a href="javascript:void(0);"><img src="/assetss/img/icons/users1.svg" alt="img"><span> Người dùng</span> <span class="menu-arrow"></span></a>
                     <ul>
                         <li><a href="#!account">Người dùng</a></li>
-                        <li><a href="supplierlist.html">Phân quyền</a></li>
-                        <li><a href="addsupplier.html">Thống kê</a></li>
-
+                        <li><a href="#!authorize">Phân quyền</a></li>
                     </ul>
                 <li>
                     <a href="#!blogs"><i data-feather="layers"></i><span> Blogs</span> </a>
+                </li>
+                <li>
+                    <a href="#!magiamgia"><i data-feather="layers"></i><span> Mã giảm giá</span> </a>
                 </li>
                 <li>
                     <a href="#!product"><i  data-feather="layers"></i><span> Đánh giá</span> </a>
