--- a/src/main/resources/static/admin/order/index.html
+++ b/src/main/resources/static/admin/order/index.html
@@ -6,7 +6,7 @@
                     <div class="btn-group float-right">
                         <ol class="breadcrumb hide-phone p-0 m-0">
                             <li class="breadcrumb-item">
-                                <a href="#">Juliee</a>
+                                <a href="#">GOTD</a>
                             </li>
                             <li class="breadcrumb-item active">Order</li>
                         </ol>
@@ -27,7 +27,6 @@
                    role="tab" aria-selected="false" ng-click="initialize(4)">Hoàn thành</a>
                 <a href="javascript:(0);" class="nav-link" data-toggle="tab" data-target="#list2" type="button"
                    role="tab" aria-selected="false" ng-click="initialize(2)">Đã hủy</a>
-
             </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
