--- a/src/main/resources/static/admin/phu/magiamgia/_table.html
+++ b/src/main/resources/static/admin/phu/magiamgia/_table.html
@@ -11,8 +11,7 @@
                 <th>Hình thức giảm</th>
                 <th>Ngày bắt đầu</th>
                 <th>Ngày kết thúc</th>
-                <th>Giảm tối thiểu</th>
-                <th>Giảm tối đa</th>
+                <th>Mức giảm</th>
                 <th>Số lượng</th>
                 <th>Trạng thái</th>
                 <th>#</th>
@@ -28,7 +27,6 @@
                 <td>{{item.htg == 0 ? 'Giảm phần trăm' : 'Giảm tiền mặt'}}</td>
                 <td>{{item.ngayBatDau | date:'dd/MM/yyyy'}}</td>
                 <td>{{item.ngayKetThuc | date:'dd/MM/yyyy'}}</td>
-                <td>{{item.gtt}}</td>
                 <td>{{item.gtd}}</td>
                 <td>{{item.sl}}</td>
                 <td>{{item.tt == 0 ? 'Hoạt động' : 'Ngưng hoạt động'}}</td>
