--- a/src/main/resources/static/admin/authority/index.html
+++ b/src/main/resources/static/admin/authority/index.html
@@ -6,7 +6,7 @@
 					<div class="btn-group float-right">
 						<ol class="breadcrumb hide-phone p-0 m-0">
 							<li class="breadcrumb-item">
-								<a href="#">Julie</a>
+								<a href="#">GOTD</a>
 							</li>
 							<li class="breadcrumb-item active">Authorities</li>
 						</ol>
@@ -24,7 +24,7 @@
 			</thead>
 			<tbody>
 				<tr ng-repeat="acc in pager.admins">
-					<td class="align-center">{{acc.fullname}}</td>
+					<td>{{acc.fullname}}</td>
 					<th ng-repeat="role in roles" class="align-center text-center">
 						<div class="custom-control custom-checkbox">
 							<input type="checkbox" class="custom-control-input" id="authority"
