--- a/src/main/resources/static/admin/order/_table1.html
+++ b/src/main/resources/static/admin/order/_table1.html
@@ -1,14 +1,14 @@
 <div class="row mx-0 bg-white" ng-if="items">
     <div class="col-12 py-3">
-        <table id="datatable-buttons-2" class="table table-collapse table-bordered dt-responsive">
+        <table id="datatable-buttons-2" style="width:100%" class="table table-collapse table-bordered dt-responsive">
             <thead>
             <tr>
                 <th>Id</th>
                 <th>Khách hàng</th>
-
                 <th>Ngày đặt hàng</th>
                 <th>Mã giảm giá</th>
-                <th>Phí giao hàng</th>
+                <th>Thanh toán</th>
+                <th>Chi tiết</th>
                 <th>Tổng tiền</th>
                 <th>Giao hàng</th>
             </tr>
@@ -17,15 +17,23 @@
             <tr ng-repeat="item in items1">
                 <td>{{item.id}}</td>
                 <td>{{item.account.username}}</td>
-                <td>{{ item.ngayDatHang | date:'mm:HH dd-MM-yyyy' }}</td>
+                <td>{{ item.ngayDatHang | date:'HH:mm dd-MM-yyyy' }}</td>
                 <td>
                     {{item.maGiamGia ? item.maGiamGia : 'Không có'}}
                 </td>
 
                 <td>
-                    {{item.phiGiaoHang}}
+                    <span ng-if="item.thanhToan === 0">Chưa thanh toán</span>
+                    <span ng-if="item.thanhToan === 1">Đã thanh toán</span>
                 </td>
+
                 <td>{{item.tongTien}}</td>
+                <td>
+                    <a href="/order/detail/{{item.id}}" class="btn btn-sm btn-default border-0"
+                       title="View your Order Details" >
+                        <i class="fa fa-eye"></i>
+                    </a>
+                </td>
                 <td>
                     <div class="btn-group btn-group-xs">
                         <button ng-click="giaoHang(item)" class="btn btn-icon">
