--- a/src/main/resources/static/admin/phu/magiamgia/_form.html
+++ b/src/main/resources/static/admin/phu/magiamgia/_form.html
@@ -25,25 +25,7 @@
                     <input type="text" class="form-control" ng-model="form.sk" placeholder="Nhập sự kiện">
                 </div>
             </div>
-            <div class="form-group row">
-                <label class="col-md-2 px-0 control-label">Hình thức giảm</label>
-                <div class="col-md-10">
-                    <div class="form-check-inline pr-3">
-                        <div class="custom-control custom-radio">
-                            <input type="radio" checked class="custom-control-input" id="yes1" name="available"
-                                   ng-model="form.htg" ng-value="0">
-                            <label class="custom-control-label" for="yes1">Phần trăm</label>
-                        </div>
-                    </div>
-                    <div class="form-check-inline">
-                        <div class="custom-control custom-radio">
-                            <input type="radio"  class="custom-control-input" id="no1" name="available"
-                                   ng-model="form.htg" ng-value="1">
-                            <label class="custom-control-label" for="no1">Tiền mặt</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
             <div class="form-group row">
                 <label class="form-label">Ngày bắt đầu</label>
                     <input type="date" class="form-control" ng-model="form.ngayBatDau" placeholder="2022-01-01">
@@ -53,15 +35,9 @@
                     <input type="date" class="form-control" ng-model="form.ngayKetThuc" placeholder="2022-01-01">
             </div>
             <div class="form-group row">
-                <label class="form-label">Giảm tối thiểu</label>
+                <label class="form-label">Giá giảm</label>
                 <div class="input-group">
-                    <input type="number" min="0" max="1000000" step="1" class="form-control" ng-model="form.gtt" placeholder="Nhập giảm tối thiểu">
-                </div>
-            </div>
-            <div class="form-group row">
-                <label class="form-label">Giảm tối đa</label>
-                <div class="input-group">
-                    <input type="number" min="0" max="1000000" step="1" class="form-control" ng-model="form.gtd" placeholder="Nhập giảm tối đa">
+                    <input type="number" min="0" max="50000" step="1" class="form-control" ng-model="form.gtd" placeholder="Nhập giảm tối đa">
                 </div>
             </div>
             <div class="form-group row">
